--- a/files for admin/article-headless.html
+++ b/files for admin/article-headless.html
@@ -16,7 +16,7 @@
         <div class="grid-col">&nbsp;</div>
     </section>
     <div class="article__image">
-        <img src="{{view url="Mirasvit_Blog::images/article/image 118.png"}}"
+        <img src="{{view url='Mirasvit_Blog::images/article/image 118.png'}}"
         alt="test">
     </div>
     <section class="article__section _article-page-grid">
@@ -123,8 +123,7 @@
     </section>
     <div class="article__image">
         <figure>
-            <img src="{{view url="Mirasvit_Blog::images/article/Image-3.png"}}"
-            alt="test">
+            <img src="{{view url='Mirasvit_Blog::images/article/Image-3.png'}}" alt="test">
             <figcaption class="article__image-label">
                 How does the logic of headless commerce look like in practice
             </figcaption>
@@ -220,8 +219,7 @@
                 </li>
             </ul>
             <div class="article__image article__image--narrow">
-                <img src="{{view url="Mirasvit_Blog::images/article/image
-                134.png"}}" alt="test">
+                <img src="{{view url='Mirasvit_Blog::images/article/image 134.png'}}" alt="test">
             </div>
             <h4 class="article__title">
                 How have developers' tasks been changed?
