added work-vodafone page and fixed headlessarticle page

--- a/files for admin/article-headless.html
+++ b/files for admin/article-headless.html
@@ -1,26 +1,26 @@
 <div class="article">
     <section class="article__section _article-page-grid">
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
         <div class="grid-col _text-align-right">
             <div class="article__intro">
-                <p class="article__text article__text--intro">
+                <h4 class="article__text--intro">
                     Usually headless is understood as the independence between a
                     Frontend and a Backend and their communication through the
                     API. But I would like to discuss it in more detail in this
                     article. Let's stay focused on headless philosophy as a
                     business approach.
-                </p>
+                </h4>
                 <div class="article__author">by Artur Potulny</div>
             </div>
         </div>
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
     </section>
     <div class="article__image">
         <img src="{{view url='Mirasvit_Blog::images/article/image 118.png'}}"
         alt="test">
     </div>
     <section class="article__section _article-page-grid">
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
         <div class="grid-col ">
             <h4 class="article__title">How headless architecture emerged</h4>
             <p class="article__text">
@@ -119,7 +119,7 @@
                 software products. Often it is the cloud service.
             </p>
         </div>
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
     </section>
     <div class="article__image">
         <figure>
@@ -130,7 +130,7 @@
         </figure>
     </div>
     <section class="article__section _article-page-grid">
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
         <div class="grid-col">
             <p class="article__text">
                 Take a look at this diagram. CMS as a center of the interaction
@@ -233,6 +233,6 @@
                 elements and to set up their work in a complex.
             </p>
         </div>
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
     </section>
 </div>
