added data-mage-init script invoke on ga4 service page

--- a/files for admin/services/ga4.html
+++ b/files for admin/services/ga4.html
@@ -1,4 +1,4 @@
-<div class="article article-gtm">
+<div class="article article-gtm" data-mage-init='{"gaForms" : {} }'>
     <section class="article__section _article-page-grid">
         <div class="grid-col">&nbsp;</div>
         <div class="grid-col">
