little fixes in articles content

--- a/files for admin/services/ga4.html
+++ b/files for admin/services/ga4.html
@@ -1,6 +1,6 @@
 <div class="article article-gtm" data-mage-init='{"gaForms" : {} }'>
     <section class="article__section _article-page-grid">
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
         <div class="grid-col">
             <div class="article__intro">
                 <h4> It's time you experienced new GA4 features!</h4>
@@ -16,7 +16,7 @@
                 <div class="article__author"> by Mikhailo Knir</div>
             </div>
         </div>
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
     </section>
     <div class="article__image">
         <img src="{{view
@@ -24,7 +24,7 @@
         alt="Implementation GTM">
     </div>
     <section class="article__section _article-page-grid">
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
         <div class="grid-col">
             <h4 class="article__title">Why should You upgrade to Google Analytics 4</h4>
             <p class="article__text">
@@ -128,7 +128,7 @@
         </div>
     </div>
     <section class="article__section _article-page-grid">
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
         <div class="grid-col">
             <h4 class="article__title">You will get new Google Analytics 4 property that contains migrated goals, conversions, and Enhanced Ecommerce events.</h4>
             <ul class="decimal-list">
@@ -252,7 +252,7 @@
         </div>
     </div>
     <section class="article__section _article-page-grid">
-        <div class="grid-col">&nbsp;</div>
+        <div class="grid-col"></div>
         <div class="grid-col">
             <div class="article-advantages">
                 <h4>Why choose us?</h4>
