fixes in articles

--- a/files for admin/services/ga4.html
+++ b/files for admin/services/ga4.html
@@ -95,7 +95,7 @@
 <span class="_button__text-overlay">Contact us</span>
 <span class="_button__overlay _button__overlay--hover"></span>
 <span class="_button__overlay _button__overlay--active"></span></button>
-                <form class="footer__form form-contact ga-contact-form">
+                <form id="contact-us_ga4" class="footer__form form-contact ga-contact-form">
                     <div class="form-contact__body">
                         <input type="text" name="first_name" class="form-contact__input" placeholder="Name" required />
                         <input type="email" name="email" class="form-contact__input validate-email" placeholder="Email" required/>
@@ -148,7 +148,7 @@
 <span class="_button__text-overlay">I want to order a service</span>
 <span class="_button__overlay _button__overlay--hover"></span>
 <span class="_button__overlay _button__overlay--active"></span></button>
-                <form class="footer__form form-contact ga-contact-form">
+                <form id="want-order-service_ga4" class="footer__form form-contact ga-contact-form">
                     <div class="form-contact__body">
                         <input type="text" name="first_name" class="form-contact__input" placeholder="Name" required />
                         <input type="email" name="email" class="form-contact__input validate-email" placeholder="Email" required/>
@@ -224,7 +224,7 @@
 <span class="_button__text-overlay">I want to order a service</span>
 <span class="_button__overlay _button__overlay--hover"></span>
 <span class="_button__overlay _button__overlay--active"></span></button>
-                <form class="footer__form form-contact ga-contact-form">
+                <form id="want-order-service_ga4-2" class="footer__form form-contact ga-contact-form">
                     <div class="form-contact__body">
                         <input type="text" name="first_name" class="form-contact__input" placeholder="Name" required />
                         <input type="email" name="email" class="form-contact__input validate-email" placeholder="Email" required/>
@@ -281,7 +281,7 @@
 <span class="_button__text-overlay">I want to order a service</span>
 <span class="_button__overlay _button__overlay--hover"></span>
 <span class="_button__overlay _button__overlay--active"></span></button>
-                <form class="footer__form form-contact ga-contact-form">
+                <form  id="want-order-service_ga4-3" class="footer__form form-contact ga-contact-form">
                     <div class="form-contact__body">
                         <input type="text" name="first_name" class="form-contact__input" placeholder="Name" required />
                         <input type="email" name="email" class="form-contact__input validate-email" placeholder="Email" required/>
