changd border-left class in all articles

--- a/files for admin/services/ga4.html
+++ b/files for admin/services/ga4.html
@@ -75,7 +75,7 @@
             <p class="article__text">
                 Although GA4 supports the Enhanced Ecommerce data schema, we recommend using the new data model instead of the old one as there is no information on how long the last one will be supported.
             </p>
-            <div class="article__text article__text--border-left">
+            <div class="article__text article__text--border-left _text-article--border-left">
                 <h4 class="article__title-bold">GA4 is not your typical software upgrade. It’s a completely different platform, and setting up GA4 on ecommerce sites is not as easy as flipping a toggle switch anymore.</h4>
             </div>
             <p class="article__text">
