changes in cms content for pagespeed optimize

--- a/files for admin/services/ga4.html
+++ b/files for admin/services/ga4.html
@@ -19,8 +19,7 @@
         <div class="grid-col"></div>
     </section>
     <div class="article__image">
-        <img src="{{view
-    url="Mirasvit_Blog::images/article/gtm/banner.jpg"}}"
+        <img loading="eager" src="{{view url="Mirasvit_Blog::images/article/gtm/banner.jpg"}}"
         alt="Implementation GTM">
     </div>
     <section class="article__section _article-page-grid">
@@ -40,15 +39,13 @@
                     </p>
                 </div>
                 <div class="article-gtm__image-container">
-                    <img src="{{view
-          url="Mirasvit_Blog::images/article/gtm/trafic.png"}}"
+                    <img src="{{view url="Mirasvit_Blog::images/article/gtm/trafic.png"}}"
                     alt="trafic-phone">
                 </div>
             </div>
             <div class="article__row">
                 <div class="article-gtm__image-container">
-                    <img src="{{view
-          url="Mirasvit_Blog::images/article/gtm/statistic.png"}}"
+                    <img src="{{view url="Mirasvit_Blog::images/article/gtm/statistic.png"}}"
                     alt="statistic">
                 </div>
                 <div class="article__flex-content">
@@ -118,7 +115,7 @@
             </div>
         </div>
         <div class="success-message">
-            <img src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" alt="rocket">
+            <img loading="lazy" src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" alt="rocket">
             <h5>Thank you!</h5>
             <h6>We will contact you shortly.</h6>
             <button class="form-contact__submit footer__button _button _button--white ga-success-form"><span class="_button__text">Send another message</span>
@@ -166,7 +163,7 @@
                 </div>
                 </div>
                 <div class="success-message">
-                    <img src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" alt="rocket">
+                    <img loading="lazy"  src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" alt="rocket">
                     <h5>Thank you!</h5>
                     <h6>We will contact you shortly.</h6>
                     <button class="form-contact__submit footer__button _button ga-success-form"><span class="_button__text">Send another message</span>
@@ -242,7 +239,7 @@
             </div>
         </div>
         <div class="success-message">
-            <img src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" alt="rocket">
+            <img  loading="lazy"  src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" alt="rocket">
             <h5>Thank you!</h5>
             <h6>We will contact you shortly.</h6>
             <button class="form-contact__submit footer__button _button _button--white ga-success-form"><span class="_button__text">Send another message</span>
@@ -299,7 +296,7 @@
                 </div>
                 </div>
                 <div class="success-message">
-                    <img src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" alt="rocket">
+                    <img loading="lazy"  src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" alt="rocket">
                     <h5>Thank you!</h5>
                     <h6>We will contact you shortly.</h6>
                     <button class="_button form-contact__submit ga-success-form"><span class="_button__text">Send another message</span>
