--- a/files for admin/services/ga4.html
+++ b/files for admin/services/ga4.html
@@ -1,4 +1,8 @@
-<div class="article article-gtm" data-mage-init='{"gaForms" : {} }'>
+<div class="article article-gtm" 
+     data-mage-init='{
+         "gaForms" : {"gtmEventName" : "sent_hire_us_form"} 
+        }'
+>
     <section class="article__section _article-page-grid">
         <div class="grid-col"></div>
         <div class="grid-col">
