added new classes for all titles on all pages/blocks since  style selector has been rewritten to a class instead of a tag

--- a/files for admin/services/ga4.html
+++ b/files for admin/services/ga4.html
@@ -3,7 +3,7 @@
     <div class="grid-col"></div>
     <div class="grid-col">
       <div class="article__intro">
-        <h4>It's time you experienced new GA4 features!</h4>
+        <h4 class="h4">It's time you experienced new GA4 features!</h4>
         <p class="article__text article__text--intro">
           Whether we like it or not, the question of switching to GA4 is no longer on the table - from July 1, 2023.
           Universal Analytics will stop processing new data, so there is no better time to migrate to GA4 than now.
@@ -27,7 +27,7 @@
   <section class="article__section _article-page-grid">
     <div class="grid-col"></div>
     <div class="grid-col">
-      <h4 class="article__title">Why should You upgrade to Google Analytics 4</h4>
+      <h4 class="h4 article__title">Why should You upgrade to Google Analytics 4</h4>
       <p class="article__text">
         Google Analytics 4 is the 4th generation of Google Analytics used by merchants, agencies, and store owners to
         get detailed metrics and reports on how customers are interacting with their various products and services.
@@ -76,13 +76,13 @@
         Users of Google Analytics can analyze and improve their conversion rate by using in-depth reports, metrics, and
         tools designed to help analyze and monitor their site's performance.
       </p>
-      <h4 class="article__title">How to implement Google Analytics 4 with Magento</h4>
+      <h4 class="h4 article__title">How to implement Google Analytics 4 with Magento</h4>
       <p class="article__text">
         Although GA4 supports the Enhanced Ecommerce data schema, we recommend using the new data model instead of the
         old one as there is no information on how long the last one will be supported.
       </p>
       <div class="article__text article__text--border-left _text-article--border-left">
-        <h4 class="article__title-bold">
+        <h4 class="h4 article__title-bold">
           GA4 is not your typical software upgrade. It’s a completely different platform, and setting up GA4 on
           ecommerce sites is not as easy as flipping a toggle switch anymore.
         </h4>
@@ -112,8 +112,8 @@
   >
     <div class="article-form-wide__row" x-show="showForm">
       <div class="article-form-wide__content" >
-        <h4>If you want to be ready for Google UA sunset we can assist you</h4>
-        <h6>We offer Google Analytics 4 implementation for ecommerce companies</h6>
+        <h4 class="h4">If you want to be ready for Google UA sunset we can assist you</h4>
+        <h6 class="h6">We offer Google Analytics 4 implementation for ecommerce companies</h6>
         <button class="form-contact__submit footer__button _button _button--white ga-open-form" 
                 @click="openForm=true"
                 x-show="!openForm"
@@ -187,8 +187,8 @@
            src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" 
            alt="rocket"
       >
-      <h5>Thank you!</h5>
-      <h6>We will contact you shortly.</h6>
+      <h5 class="h5">Thank you!</h5>
+      <h6 class="h6">We will contact you shortly.</h6>
       <button class="form-contact__submit footer__button _button _button--white ga-success-form" 
               @click="toggleSuccessMessage()"
       >
@@ -204,7 +204,7 @@
   <section class="article__section _article-page-grid">
     <div class="grid-col"></div>
     <div class="grid-col">
-      <h4 class="article__title">
+      <h4 class="h4 article__title">
         You will get new Google Analytics 4 property that contains migrated goals, conversions, and Enhanced Ecommerce
         events.
       </h4>
@@ -239,7 +239,7 @@
         >
         <div x-show="showForm">
           <div class="article__grey-form-container">
-            <h4>Get Google Analytics 4 today to see why Magento webstores should upgrade to it</h4>
+            <h4 class="h4">Get Google Analytics 4 today to see why Magento webstores should upgrade to it</h4>
             <button class="_button form-contact__submit ga-open-form"
                     @click="openForm=true"
                     x-show="!openForm"
@@ -303,8 +303,8 @@
                src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" 
                alt="rocket"
           />
-          <h5>Thank you!</h5>
-          <h6>We will contact you shortly.</h6>
+          <h5 class="h5">Thank you!</h5>
+          <h6 class="h6">We will contact you shortly.</h6>
           <button class="form-contact__submit footer__button _button ga-success-form"
                   @click="toggleSuccessMessage()"
           >
@@ -416,11 +416,11 @@
         <img src="{{view url="Mirasvit_Blog::images/article/gtm/gears.png"}}" alt="gears">
       </div>
       <div class="article-form-wide__content">
-        <h6>
+        <h6 class="h6">
           Manually setting up the tool with Magento 2 with all the required eCommerce tracking events can be complex and
           is prone to errors, which may result in inaccurate web analytics. We know how to do it right
         </h6>
-        <h4>We know how to do it right</h4>
+        <h4 class="h4">We know how to do it right</h4>
         <button class="form-contact__submit footer__button _button _button--white ga-open-form"
                 @click="openForm=true"
                 x-show="!openForm"
@@ -491,8 +491,8 @@
            src="{{view url="Mirasvit_Blog::images/article/gtm/rocket.gif"}}" 
            alt="rocket"
       >
-      <h5>Thank you!</h5>
-      <h6>We will contact you shortly.</h6>
+      <h5 class="h5">Thank you!</h5>
+      <h6 class="h6">We will contact you shortly.</h6>
       <button class="form-contact__submit footer__button _button _button--white ga-success-form"
               @click="toggleSuccessMessage()"
       >
@@ -509,14 +509,14 @@
     <div class="grid-col"></div>
     <div class="grid-col">
       <div class="article-advantages">
-        <h4>Why choose us?</h4>
-        <h6>We work hard every day to make life of our clients better and happier</h6>
+        <h4 class="h4">Why choose us?</h4>
+        <h6 class="h6">We work hard every day to make life of our clients better and happier</h6>
         <div class="article-advantages__item">
           <div class="article-advantages__image">
             <img src="{{view url="Mirasvit_Blog::images/article/gtm/star.svg"}}" alt="star">
           </div>
           <div class="article-advantages__content">
-            <h5>High Quality</h5>
+            <h5 class="h5">High Quality</h5>
             <p>12 years of experience, 67 employees in the team, 42 successful projects</p>
           </div>
         </div>
@@ -525,7 +525,7 @@
             <img src="{{view url="Mirasvit_Blog::images/article/gtm/chat.svg"}}" alt="star">
           </div>
           <div class="article-advantages__content">
-            <h5>Good Support</h5>
+            <h5 class="h5">Good Support</h5>
             <p>Certified Google Analytics experts who work exclusively with Magento 2</p>
           </div>
         </div>
@@ -543,7 +543,7 @@
         >
         <div x-show="showForm">
           <div class="article__grey-form-container">
-            <h4>Take advantage of the next generation of Google Analytics tracking today</h4>
+            <h4 class="h4">Take advantage of the next generation of Google Analytics tracking today</h4>
             <p>UA will stop processing new hits on July one 2023. Be prepared!</p>
             <button class="_button form-contact__submit ga-open-form"
                     @click="openForm=true"
@@ -608,8 +608,8 @@
                src="{{view url="Mirasvit_Blog::images/article/gtm/rocket-black.gif"}}" 
                alt="rocket"
           />
-          <h5>Thank you!</h5>
-          <h6>We will contact you shortly.</h6>
+          <h5 class="h5">Thank you!</h5>
+          <h6 class="h6">We will contact you shortly.</h6>
           <button class="_button form-contact__submit ga-success-form"
                   @click="toggleSuccessMessage()"
           >
